Fixed issues detected using FindBugs, plus corrected JavaDoc typos. Moved project to version 0.5.46.